--- a/Weather_Broadcast/Weather_Broadcast/Weather_Broadcast.csproj
+++ b/Weather_Broadcast/Weather_Broadcast/Weather_Broadcast.csproj
@@ -71,6 +71,7 @@
     <Compile Include="MainWeatherForm.Designer.cs">
       <DependentUpon>MainWeatherForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="WeatherWidget.cs" />
     <Compile Include="Weather.cs" />
     <Compile Include="WeatherBoard.cs">
       <SubType>Form</SubType>
@@ -80,6 +81,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Widget.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Widget.Designer.cs">
+      <DependentUpon>Widget.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WidgetOption.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WidgetOption.Designer.cs">
+      <DependentUpon>WidgetOption.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DailyDetailsControl.resx">
       <DependentUpon>DailyDetailsControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +115,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Widget.resx">
+      <DependentUpon>Widget.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WidgetOption.resx">
+      <DependentUpon>WidgetOption.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
